2003-05-13  Jody Goldberg <jody@gnome.org>

	* src/pattern.c (gnumeric_pattern_get_stipple) : fence post.

2003-05-13  Morten Welinder  <terra@gnome.org>

	* src/stf-parse.c (trim_spaces_inplace): Make UTF-8 safe.

2003-05-12  Morten Welinder  <terra@gnome.org>

	* src/stf.c (stf_open_and_read): Fix crash on errors and empty
	files.  Fix return value for empty files.

	* src/xml-io.c (gnumeric_xml_write_workbook): Fix broken object
	handling.

2003-05-12  Andreas J. Guelzow <aguelzow@taliesin.ca>

	* src/stf-parse.c (compare_terminator) : return the byte 
	  length of the used terminator
	(stf_parse_paresoptions_new): initialize the string indicator
	  to our default
	(stf_parse_next_token): pass all parse options, check also for 
	  separators and terminators
	(stf_parse_options_csv_set_stringindicator): the string 
	  indicator could be a non-ascii character
	(stf_parse_csv_cell): use the type information returned by 
	  stf_parse_next_token
	(stf_parse_eat_separators): Don't eat null bytes.
	(stf_parse_get_rowcount): use stf_parse_next_token to avoid
	  counting in-string newlines
	* src/stf-parse.h (stf_parse_next_token): pass all parse
	  options
	(stf_parse_options_csv_set_stringindicator): the string
	  indicator could be a non-ascii character
	* src/stf.c (stf_read_workbook_auto_csvtab): stf_parse_next_token
	  now needs a parseoption

2003-05-12  Jody Goldberg <jody@gnome.org>

	* omf-install/Makefile.am : add missing ;

2003-05-12  Jody Goldberg <jody@gnome.org>

	* configure.in : post release version bump

2003-05-11  Jody Goldberg <jody@gnome.org>

	* Release 1.1.17

2003-05-09  Jody Goldberg <jody@gnome.org>

	* src/item-edit.c (item_edit_set_arg) : Use connect_object and
	  simplify the detroy function
	(item_edit_destroy) : by not having to recall the handler ids.

2003-05-09  Jody Goldberg <jody@gnome.org>

	* src/workbook-control-gui.c (cb_data_pivottable) : disable until it
	  does something.
	* src/GNOME_Gnumeric.xml : ditto.
