@@ -1,3 +1,9 @@
+2003-05-13  Morten Welinder  <terra@gnome.org>
+
+	* src/mathfunc.c (random_binomial): Use qbinom for sane time
+	consumption.
+	(random_negbinom): Use qnbinom for sane time consumption.
+
 2003-05-13  Jody Goldberg <jody@gnome.org>
 
 	* src/pattern.c (gnumeric_pattern_get_stipple) : fence post.
