@@ -2531,6 +2531,114 @@ gnm_float pnbinom(gnm_float x, gnm_float n, gnm_float p, gboolean lower_tail, gb
 }
 
 /* ------------------------------------------------------------------------ */
+/* Imported src/nmath/qnbinom.c from R.  */
+/*
+ *  Mathlib : A C Library of Special Functions
+ *  Copyright (C) 1998 Ross Ihaka
+ *  Copyright (C) 2000 The R Development Core Team
+ *
+ *  This program is free software; you can redistribute it and/or modify
+ *  it under the terms of the GNU General Public License as published by
+ *  the Free Software Foundation; either version 2 of the License, or
+ *  (at your option) any later version.
+ *
+ *  This program is distributed in the hope that it will be useful,
+ *  but WITHOUT ANY WARRANTY; without even the implied warranty of
+ *  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ *  GNU General Public License for more details.
+ *
+ *  You should have received a copy of the GNU General Public License
+ *  along with this program; if not, write to the Free Software
+ *  Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA  02111-1307 USA.
+ *
+ *  SYNOPSIS
+ *
+ *	#include <Rmath.h>
+ *	double qnbinom(double p, double n, double pr, int lower_tail, int log_p)
+ *
+ *  DESCRIPTION
+ *
+ *	The quantile function of the negative binomial distribution.
+ *
+ *  NOTES
+ *
+ *	x = the number of failures before the n-th success
+ *
+ *  METHOD
+ *
+ *	Uses the Cornish-Fisher Expansion to include a skewness
+ *	correction to a normal approximation.  This gives an
+ *	initial value which never seems to be off by more than
+ *	1 or 2.	 A search is then conducted of values close to
+ *	this initial start point.
+ */
+
+
+gnm_float qnbinom(gnm_float p, gnm_float n, gnm_float pr, gboolean lower_tail, gboolean log_p)
+{
+    gnm_float P, Q, mu, sigma, gamma, z, y;
+
+#ifdef IEEE_754
+    if (isnangnum(p) || isnangnum(n) || isnangnum(pr))
+	return p + n + pr;
+#endif
+    R_Q_P01_check(p);
+    if (pr <= 0 || pr >= 1 || n <= 0) ML_ERR_return_NAN;
+
+    if (p == R_DT_0) return 0;
+    if (p == R_DT_1) return ML_POSINF;
+    Q = 1.0 / pr;
+    P = (1.0 - pr) * Q;
+    mu = n * P;
+    sigma = sqrtgnum(n * P * Q);
+    gamma = (Q + P)/sigma;
+
+    /* Note : "same" code in qpois.c, qbinom.c, qnbinom.c --
+     * FIXME: This is far from optimal [cancellation for p ~= 1, etc]: */
+    if(!lower_tail || log_p) {
+	p = R_DT_qIv(p); /* need check again (cancellation!): */
+	if (p == R_DT_0) return 0;
+	if (p == R_DT_1) return ML_POSINF;
+    }
+    /* temporary hack --- FIXME --- */
+    if (p + 1.01*GNUM_EPSILON >= 1.) return ML_POSINF;
+
+    /* y := approx.value (Cornish-Fisher expansion) :  */
+    z = qnorm(p, 0., 1., /*lower_tail*/TRUE, /*log_p*/FALSE);
+    y = floorgnum(mu + sigma * (z + gamma * (z*z - 1) / 6) + 0.5);
+
+    z = pnbinom(y, n, pr, /*lower_tail*/TRUE, /*log_p*/FALSE);
+
+    /* fuzz to ensure left continuity: */
+    p *= 1 - 64*GNUM_EPSILON;
+
+/*-- Fixme, here y can be way off --
+  should use interval search instead of primitive stepping down or up */
+
+#ifdef maybe_future
+    if((lower_tail && z >= p) || (!lower_tail && z <= p)) {
+#else
+    if(z >= p) {
+#endif
+			/* search to the left */
+	for(;;) {
+	    if(y == 0 ||
+	       (z = pnbinom(y - 1, n, pr, /*l._t.*/TRUE, /*log_p*/FALSE)) < p)
+		return y;
+	    y = y - 1;
+	}
+    }
+    else {		/* search to the right */
+
+	for(;;) {
+	    y = y + 1;
+	    if((z = pnbinom(y, n, pr, /*l._t.*/TRUE, /*log_p*/FALSE)) >= p)
+		return y;
+	}
+    }
+}
+
+/* ------------------------------------------------------------------------ */
 /* Imported src/nmath/dbeta.c from R.  */
 /*
  *  AUTHOR
@@ -4723,20 +4831,7 @@ random_poisson (gnm_float lambda)
 gnm_float
 random_binomial (gnm_float p, int trials)
 {
-	gnm_float x = powgnum (1 - p, trials);
-	gnm_float r = random_01 ();
-	gnm_float t = x;
-	gnm_float i = 0;
-
-	/* FIXME: I don't think this is sane for p near 1.  */
-	/* FIXME: how many times can this loop?	 */
-	while (r > t) {
-	      x *= (((trials - i) * p) / ((1 + i) * (1 - p)));
-	      i += 1;
-	      t += x;
-	}
-
-	return i;
+	return qbinom (random_01 (), trials, p, TRUE, FALSE);
 }
 
 /*
@@ -4745,20 +4840,7 @@ random_binomial (gnm_float p, int trials)
 gnm_float
 random_negbinom (gnm_float p, int f)
 {
-	gnm_float x = powgnum (p, f);
-	gnm_float r = random_01 ();
-	gnm_float t = x;
-	gnm_float i = 0;
-
-	/* FIXME: I don't think this is sane for p near 1.  */
-	/* FIXME: how many times can this loop?	 */
-	while (r > t) {
-	      x *= (((f + i) * (1 - p)) / (1 + i));
-	      i += 1;
-	      t += x;
-	}
-
-	return i;
+	return qnbinom (random_01 (), f, p, TRUE, FALSE);
 }
 
 /*
