@@ -13,6 +13,8 @@ Morten:
 	* Leak fix for gnumeric xml saving.
 	* Leak fix for character encoding selection.
 	* Fix stf import crash for empty files.
+	* Improve generation of binomial and negative-binomial random
+	  numbers.
 
 --------------------------------------------------------------------------
 
